--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body{
 
 .profile-picture{
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 50%;
+    margin-right: 50%;
 
     margin-top: 10%;
     height: auto;
